--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,3 +1,10 @@
+"scripts": {
+  "start": "expo start",
+  "android": "expo start --android",
+  "ios": "expo start --ios",
+  "web": "expo start --web",
+  "build:web": "expo export --platform web"
+},
 {
   "name": "frontend",
   "main": "expo-router/entry",
