--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,11 @@
 "scripts": {
   "start": "expo start",
+  "reset-project": "node ./scripts/reset-project.js",
   "android": "expo start --android",
   "ios": "expo start --ios",
   "web": "expo start --web",
-  "build:web": "expo export --platform web"
+  "build:web": "expo export --platform web",
+  "lint": "expo lint"
 },
 {
   "name": "frontend",
